Do not pass usleep() values >= 1 million. From Henning Petersen in PR 51286